[9.0][IMP] rma_sale: * simplify actgion_view methods. * remove unneded copy and ondelete attributes. * Fix wizard to add rma lines from SO. * Update README and some strings.

--- a/rma_sale/views/rma_order_line_view.xml
+++ b/rma_sale/views/rma_order_line_view.xml
@@ -71,7 +71,7 @@
         <field name="arch" type="xml">
             <header position="inside">
                 <button name="%(action_rma_order_line_make_sale_order)d" states="approved"
-                        string="Create Sale Quotation" class="oe_highlight"
+                        string="Create Sales Quotation" class="oe_highlight"
                         type="action"/>
             </header>
         </field>
@@ -83,7 +83,7 @@
         <field name="arch" type="xml">
             <header position="inside">
                 <button name="%(action_rma_order_line_make_sale_order)d" states="approved"
-                        string="Create Sale Quotation" class="oe_highlight"
+                        string="Create Sales Quotation" class="oe_highlight"
                         type="action"/>
             </header>
         </field>
