[9.0][REW] rma_sale: adapt

--- a/rma_sale/views/rma_order_line_view.xml
+++ b/rma_sale/views/rma_order_line_view.xml
@@ -16,6 +16,11 @@
                                    string="Sales Orders"/>
                     </button>
                 </div>
+                <group name="main_info" position="inside">
+                    <field name="sale_line_id"
+                           options="{'no_create': True}"
+                           domain="[('order_id.partner_id', '=', partner_id)]"/>
+                </group>
                 <group name="quantities" position="inside">
                     <group>
                         <field name="qty_to_sell"/>
