--- a/rma_sale/wizards/rma_add_sale.xml
+++ b/rma_sale/wizards/rma_add_sale.xml
@@ -68,12 +68,11 @@
         <field name="model">rma.order</field>
         <field name="inherit_id" ref="rma.view_rma_form"/>
         <field name="arch" type="xml">
-            <button name="action_rma_done" position="after">
+            <xpath expr="//header" position="inside">
                 <button name="%(action_rma_add_sale)d"
                         string="Add From Sale Order"
-                        type="action"
-                        states="draft,to_approve"/>
-            </button>
+                        type="action"/>
+            </xpath>
         </field>
     </record>
 
