[9.0][IMP] rma: add link to source SO and PO

--- a/rma_sale/views/rma_order_line_view.xml
+++ b/rma_sale/views/rma_order_line_view.xml
@@ -32,6 +32,10 @@
                 <field name="delivery_policy" position="after">
                     <field name="sale_type"/>
                 </field>
+                <field name="origin" position="after">
+                    <field name="sale_id"
+                           attrs="{'invisible': [('sale_line_id', '=', False)]}"/>
+                </field>
                 <notebook position="inside">
                     <page name="sale" string="Sale Lines">
                         <field name="sale_line_ids" nolabel="1"/>
