--- a/rma_sale/views/rma_order_line_view.xml
+++ b/rma_sale/views/rma_order_line_view.xml
@@ -18,6 +18,7 @@
                 </div>
                 <group name="main_info" position="inside">
                     <field name="sale_line_id"
+                           context="{'rma': True}"
                            options="{'no_create': True}"
                            domain="['|',
                                     ('order_id.partner_id', '=', partner_id),
