[FIX]rma_sale sale_policy instead of sale_type

--- a/rma_sale/views/rma_operation_view.xml
+++ b/rma_sale/views/rma_operation_view.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="rma.rma_operation_tree"/>
             <field name="arch" type="xml">
                 <field name="delivery_policy" position="after">
-                    <field name="sale_type"/>
+                    <field name="sale_policy"/>
                 </field>
             </field>
         </record>
@@ -19,7 +19,7 @@
             <field name="inherit_id" ref="rma.rma_operation_form"/>
             <field name="arch" type="xml">
                 <field name="delivery_policy" position="after">
-                    <field name="sale_type"/>
+                    <field name="sale_policy"/>
                 </field>
             </field>
         </record>
