[FIX]sale group

--- a/rma_sale/views/rma_order_line_view.xml
+++ b/rma_sale/views/rma_order_line_view.xml
@@ -10,7 +10,7 @@
                     <button type="object"  name="action_view_sale_order"
                             class="oe_stat_button"
                             icon="fa-strikethrough"
-                            groups="base.group_sale_salesman">
+                            groups="sales_team.group_sale_salesman_all_leads">
                             <field name="sales_count" widget="statinfo"
                                    string="Sales Orders"/>
                     </button>
@@ -49,7 +49,7 @@
                     <button type="object"  name="action_view_sale_order"
                             class="oe_stat_button"
                             icon="fa-strikethrough"
-                            groups="base.group_sale_salesman">
+                            groups="sales_team.group_sale_salesman_all_leads">
                             <field name="sales_count" widget="statinfo"
                                    string="Sales Orders"/>
                     </button>
