--- a/rma_sale/views/sale_order_view.xml
+++ b/rma_sale/views/sale_order_view.xml
@@ -7,13 +7,11 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
                 <xpath
-                    expr="//notebook/page/field[@name='order_line']/form/group/group"
-                    position="inside">
-                    <group name="rma">
-                        <field name="rma_line_id"
-                               options="{'no_create': True}"
-                               groups="rma.rma_customer_user"/>
-                    </group>
+                    expr="//notebook/page/field[@name='order_line']/form/group/group/field[@name='price_unit']"
+                    position="after">
+                    <field name="rma_line_id"
+                           options="{'no_create': True}"
+                           groups="rma.group_rma_customer_user,rma.group_rma_supplier_user"/>
                 </xpath>
             </field>
         </record>
