--- a/rma_quality_control_issue/wizard/qc_issue_make_supplier_rma_view.xml
+++ b/rma_quality_control_issue/wizard/qc_issue_make_supplier_rma_view.xml
@@ -47,13 +47,13 @@
                      </field>
                  </group>
                  <newline/>
-                 <group colspan="2">
+                 <footer>
                      <button name="make_supplier_rma"
                              string="Create/Update Supplier RMA"
                              type="object"
                              class="oe_highlight"/>
                      <button special="cancel" string="Cancel" class="oe_link"/>
-                 </group>
+                 </footer>
             </form>
         </field>
     </record>
@@ -67,16 +67,7 @@
         <field name="view_mode">form</field>
         <field name="view_id" ref="view_qc_issue_make_supplier_rma"/>
         <field name="target">new</field>
-    </record>
-
-    <record model="ir.values" id="qc_issue_make_supplier_rma">
-        <field name="model_id" ref="model_qc_issue" />
-        <field name="name">Create Supplier RMA</field>
-        <field name="key2">client_action_multi</field>
-        <field name="value"
-               eval="'ir.actions.act_window,' + str(ref('action_qc_issue_make_supplier_rma'))" />
-        <field name="key">action</field>
-        <field name="model">qc.issue</field>
+        <field name="binding_model_id" ref="rma_quality_control_issue.model_qc_issue"/>
     </record>
 
      <record id="view_qc_issue_supplier_rma_button_form" model="ir.ui.view">
