--- a/rma_sale/views/rma_order_line_view.xml
+++ b/rma_sale/views/rma_order_line_view.xml
@@ -103,8 +103,8 @@
         <field name="inherit_id" ref="rma.view_rma_rma_line_filter"/>
         <field name="arch" type="xml">
             <group name="stock_quantities" position="after">
-                <group name="sale_quantities" groups="base.group_sale_salesman">
-                    <filter domain="[('state','!=', 'done'),('qty_to_sell','>',0.0)]" help="To Sell"/>
+                <group name="sale_quantities" groups="sales_team.group_sale_salesman">
+                    <filter domain="[('state','!=', 'done'),('qty_to_sell','>',0.0)]" help="To Sell" name="to_sell"/>
                 </group>
             </group>
         </field>
