--- a/rma_sale/views/rma_order_view.xml
+++ b/rma_sale/views/rma_order_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
         <record id="view_rma_form" model="ir.ui.view">
             <field name="name">rma.order.form</field>
             <field name="model">rma.order</field>
@@ -10,12 +9,11 @@
                     <button type="object" name="action_view_sale_order"
                             class="oe_stat_button"
                             icon="fa-pencil-square-o"
-                            groups="base.group_sale_salesman">
+                            groups="sales_team.group_sale_salesman">
                         <field name="sale_count" widget="statinfo"
                                string="Origin SO"/>
                     </button>
                 </div>
             </field>
         </record>
-    </data>
 </odoo>
