--- a/rma_sale/wizards/rma_order_line_make_sale_order_view.xml
+++ b/rma_sale/wizards/rma_order_line_make_sale_order_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright 2016 Eficent Business and IT Consulting Services S.L.
      License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl-3.0) -->
-<openerp>
-    <data>
+<odoo>
+
         <record id="view_rma_order_line_make_sale_order" model="ir.ui.view">
             <field name="name">RMA Line Make Sale Order</field>
             <field name="model">rma.order.line.make.sale.order</field>
@@ -33,7 +33,7 @@
                                   <field name="name"/>
                                   <field name="product_qty"/>
                                   <field name="product_uom_id"
-                                         groups="product.group_uom"/>
+                                         groups="uom.group_uom"/>
                                   <field name="free_of_charge"/>
                               </tree>
                          </field>
@@ -59,6 +59,5 @@
             <field name="target">new</field>
         </record>
 
-    </data>
-</openerp>
+</odoo>
 
