--- a/rma_account/wizards/rma_refund.xml
+++ b/rma_account/wizards/rma_refund.xml
@@ -16,12 +16,13 @@
                 </group>
                 <field name="item_ids">
                     <tree string="RMA Lines" editable="bottom">
-                        <field name="rma_id" invisible="1" />
-                        <field name="product_id" invisible="1" />
+                        <field name="rma_id" invisible="1" readonly="1" />
+                        <field name="product_id" invisible="1" readonly="1" />
                         <field name="product" />
                         <field name="name" />
-                        <field name="product_qty" />
-                        <field name="uom_id" groups="uom.group_uom" />
+                        <field name="line_id" />
+                        <field name="product_qty" readonly="1" />
+                        <field name="uom_id" groups="uom.group_uom" readonly="1" />
                         <field name="qty_to_refund" readonly="0" />
                     </tree>
                 </field>
