--- a/rma_sale/views/rma_order_view.xml
+++ b/rma_sale/views/rma_order_view.xml
@@ -13,11 +13,7 @@
                     icon="fa-pencil-square-o"
                     groups="sales_team.group_sale_salesman"
                 >
-                        <field
-                        name="sale_count"
-                        widget="statinfo"
-                        string="Origin SO"
-                    />
+                        <field name="sale_count" widget="statinfo" string="Origin SO" />
                     </button>
                 </div>
             </field>
