[MIG] rma_sale: Migration to 14.0

--- a/rma_sale/wizards/rma_add_sale.xml
+++ b/rma_sale/wizards/rma_add_sale.xml
@@ -7,11 +7,7 @@
             <form string="Select Sale Order from customer">
                 <separator string="Select Sale Order from customer" />
                 <group>
-                    <field
-                        name="partner_id"
-                        domain="[('customer','=',True)]"
-                        string="Customer"
-                    />
+                    <field name="partner_id" />
                 </group>
                 <separator string="Select Sale Order Lines to Add" />
                 <group>
